# puffling

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/commit/: SKILL.md
backend/: main.py
backend/api/routes/: agent.py  ai.py  alerts.py  backtest.py  broker.py  data.py  factors.py  live_adapt.py  models.py  monitor.py  optimize.py  portfolio.py  portfolio_goals.py  (+6 more)
backend/core/: config.py  database.py  deps.py
backend/models/: __init__.py  agent_log.py  ai_conversation.py  alert_config.py  alert_history.py  backtest_result.py  live_adaptation.py  optimization_job.py  portfolio_goal.py  scheduled_job.py  settings.py  strategy_config.py  trade_history.py  user.py  watchlist.py
backend/services/: ai_service.py  ai_tools.py  alert_service.py  autonomous_agent_service.py  backtest_service.py  broker_service.py  data_service.py  factors_service.py  live_adapter_service.py  model_service.py  monitor_service.py  optimizer_service.py  portfolio_manager_service.py  portfolio_service.py  regime_detector.py  risk_service.py  safety_service.py  scheduler_service.py  settings_service.py  strategy_runner_service.py  strategy_service.py
docs/: USER_GUIDE.md
frontend/: jest.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: app.spec.ts
openspec/research/: backup-strategy.md  user-management.md
tests/: conftest.py  test_api.py  test_autonomous.py  test_broker_multi_asset.py  test_e2e.py  test_live_adaptation.py  test_optimizer.py  test_services.py  test_strategy_runner.py
(+90 files in other folders)
