[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puffling"
version = "0.1.0"
description = "AI-powered algorithmic trading application"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110,<0.116",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
    "apscheduler>=3.10",
    "puffin",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100
